Coverity analysis defect 154828: Data race condition

XMLWordPrintableJSON

    • Server Security
    • Fully Compatible
    • ALL
    • Security 2024-12-23
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Data race condition

      The value of the shared data will be determined by the interleaving of thread execution. Thread shared data is accessed without holding an appropriate lock, possibly causing a race condition
      /data/bazel_cache/1de52aaeb35278243ca29a4785ce7969/execroot/_main_/src/mongo/db/modules/enterprise/src/encryptdb/keystore.cpp:319: MISSING_LOCK 154828 Accessing "this->_parent->_rolloverId" without holding lock "mongo::KeystoreImplV1._dbNameToKeyIdCurrentMutex". Elsewhere, "mongo::KeystoreImplV1._rolloverId" is written to with "KeystoreImplV1._dbNameToKeyIdCurrentMutex" held 1 out of 1 times (1 of these accesses strongly imply that it is necessary).

            Assignee:
            Sara Golemon (Inactive)
            Reporter:
            Coverity Collector User
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: