SERVER-98133 SERVER-98134 Guard concurrent access to ESE rolloverId (#30095)